<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_list_or_pager_view"
        android:title="@string/action_list_or_pager_view"
        android:icon="@drawable/ic_view_list"
        app:showAsAction="always"/>

    <item android:id="@+id/action_random_joke"
        android:title="@string/action_random_joke"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"/>

    <item android:id="@+id/action_share_app"
        android:title="@string/action_share_app"
        app:showAsAction="never"/>

    <item android:id="@+id/action_rate_app"
        android:title="@string/action_rate_app"
        app:showAsAction="never"/>

</menu>