<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_navigation_menu_height"
    android:background="@color/grey_500"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_action_category_title"
        android:layout_width="@dimen/bottom_navigation_menu_item_size"
        android:layout_height="@dimen/bottom_navigation_menu_item_size"
        android:drawableTop="@drawable/ic_category"
        android:text="@string/category"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="@dimen/bottom_navigation_menu_item_view_margin"
        android:padding="@dimen/bottom_navigation_menu_item_view_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_action_full_list_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_action_rating_title"/>

    <TextView
        android:id="@+id/tv_action_full_list_title"
        android:layout_width="@dimen/bottom_navigation_menu_item_size"
        android:layout_height="@dimen/bottom_navigation_menu_item_size"
        android:drawableTop="@drawable/ic_full_list"
        android:text="@string/full_list"
        android:gravity="center"
        android:layout_margin="@dimen/bottom_navigation_menu_item_view_margin"
        android:padding="@dimen/bottom_navigation_menu_item_view_margin"
        app:layout_constraintStart_toEndOf="@id/tv_action_category_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_action_favorites_title"/>

    <TextView
        android:id="@+id/tv_action_rating_title"
        android:layout_width="@dimen/bottom_navigation_menu_item_size"
        android:layout_height="@dimen/bottom_navigation_menu_item_size"
        android:drawableTop="@drawable/ic_rating"
        android:text="@string/rating"
        android:gravity="center"
        android:layout_margin="@dimen/bottom_navigation_menu_item_view_margin"
        android:padding="@dimen/bottom_navigation_menu_item_view_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_action_favorites_title"
        app:layout_constraintTop_toBottomOf="@id/tv_action_category_title"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_action_favorites_title"
        android:layout_width="@dimen/bottom_navigation_menu_item_size"
        android:layout_height="@dimen/bottom_navigation_menu_item_size"
        android:drawableTop="@drawable/ic_favorite"
        android:text="@string/favorites"
        android:gravity="center"
        android:layout_margin="@dimen/bottom_navigation_menu_item_view_margin"
        android:padding="@dimen/bottom_navigation_menu_item_view_margin"
        app:layout_constraintStart_toEndOf="@id/tv_action_rating_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_action_full_list_title"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>